--- a/locales/ru/LC_MESSAGES/messages.po
+++ b/locales/ru/LC_MESSAGES/messages.po
@@ -7,54 +7,399 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-02-08 14:05+0200\n"
-"PO-Revision-Date: 2024-02-07 15:51+0200\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: ru\n"
+"POT-Creation-Date: 2024-02-09 15:06+0200\n"
+"PO-Revision-Date: 2024-02-09 15:08+0200\n"
+"Last-Translator: \n"
 "Language-Team: ru <LL@li.org>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "Generated-By: Babel 2.14.0\n"
+"X-Generator: Poedit 3.4.2\n"
 
-#: controllers/user/start.py:24
-msgid "Start calculation"
+#: controllers/user/back_handlers.py:17 controllers/user/back_handlers.py:40
+#: controllers/user/start.py:57 controllers/user/start.py:87
+#: controllers/user/start.py:116 controllers/user/start.py:136
+#: controllers/user/start.py:161
+#: keyboards/natal_chart/get_geonames_buttons.py:25
+#: keyboards/natal_chart/get_select_gender_buttons.py:25
+msgid "⬅️ Back"
+msgstr "⬅️ Назад"
+
+#: controllers/user/back_handlers.py:21 controllers/user/start.py:61
+msgid "What is your name?"
+msgstr "Как Вас зовут?"
+
+#: controllers/user/back_handlers.py:30 controllers/user/start.py:73
+msgid "Choose your gender"
+msgstr "Выберите свой пол"
+
+#: controllers/user/back_handlers.py:44 controllers/user/start.py:91
+msgid ""
+"Enter the day, month and year of your birth in the format DD.MM.YYYY. For "
+"example: 31.12.1990"
 msgstr ""
+"Введите день, месяц и год вашего рождения в формате ДД.ММ.ГГГГ. Например: "
+"31.12.1990"
 
-#: controllers/user/start.py:28
+#: controllers/user/start.py:27
+msgid "Start calculation"
+msgstr "Начать расчет"
+
+#: controllers/user/start.py:31
 msgid ""
 "Welcome message.\n"
 "\n"
 "We do not share your data with third parties."
 msgstr ""
+"Приветственное сообщение.\n"
+"\n"
+"Мы не передаем ваши данные третьим лицам."
 
-#: controllers/user/start.py:38
-msgid "⬅️ Back"
-msgstr ""
+#: controllers/user/start.py:40
+msgid "Please choose your language 🌐"
+msgstr "Пожалуйста, выберите язык 🌐"
 
-#: controllers/user/start.py:42
-msgid "What is your name?"
-msgstr ""
+#: controllers/user/start.py:100
+msgid "Inputted value is invalid, correct format is DD.MM.YYYY"
+msgstr "Введенное значение недействительно, правильный формат - ДД.ММ.ГГГГ"
 
-#: controllers/user/start.py:52
-msgid "When were you born? Select date and time."
-msgstr ""
-
-#: controllers/user/start.py:74
-msgid ""
-"What time were you born? Choose a time. If you don't know, select <b>I "
-"don't know exact time</b> we will use default time."
-msgstr ""
-
-#: keyboards/natal_chart/SimpleTimeChooser.py:66
-msgid "Confirm"
-msgstr ""
-
-#: keyboards/natal_chart/SimpleTimeChooser.py:77
+#: controllers/user/start.py:112 keyboards/natal_chart/SimpleTimeChooser.py:67
 msgid "I dont know exact time"
+msgstr "Я не знаю точного времени"
+
+#: controllers/user/start.py:121
+msgid ""
+"What time were you born? Type a time in 24 hours format HH:mm. For example: "
+"23:20.  If you don't know, select 'I don't know exact time' we will use "
+"default time."
 msgstr ""
+"В какое время ты родился? Введите время в 24-часовом формате ЧЧ:мм. "
+"Например: 23:20. Если вы не знаете, выберите «Я не знаю точного времени», мы "
+"будем использовать время по умолчанию."
+
+#: controllers/user/start.py:140 controllers/user/start.py:166
+msgid "Write the city and country of birth, for example: Nikolaev, Ukraine."
+msgstr "Напишите город и страну рождения, например: Николаев, Украина."
+
+#: controllers/user/start.py:150
+msgid "Inputted value is invalid, correct format is HH:MM"
+msgstr "Введенное значение неверно. Правильный формат: ЧЧ:ММ"
+
+#: controllers/user/start.py:176
+msgid "<b>Confirm your place of birth:</b>"
+msgstr "<b>Подтвердите свое место рождения:</b>"
+
+#: controllers/user/start.py:192
+msgid "You location {location_name} confirmed"
+msgstr "Ваше местоположение {location_name} подтверждено"
+
+#: controllers/user/start.py:200
+msgid "Choose topics that interest you (at least one):"
+msgstr "Выберите темы, которые вас интересуют (хотя бы одну):"
+
+#: controllers/user/start.py:207
+msgid "Calculating is takes a bit of time. We answer you when it will be ready"
+msgstr "Расчет занимает некоторое время. Мы ответим вам, когда он будет готов"
+
+#: controllers/user/start.py:228
+msgid ""
+"You're an astrologer aiming for maximum personalization of responses based "
+"on the user's astrological data. Communicate using \"you\", adopting a "
+"youthful style with elements of modern slang, but do so flexibly and "
+"appropriately. Inject humor and amusing descriptions where it's adequate and "
+"cannot be misinterpreted.\n"
+"\n"
+"You must response in HTML format. Use only AVAILEBLE HTML tags\n"
+" AVAILABLE HTML tags are <p>, <b>, <i>"
+msgstr ""
+"Вы астролог, стремящийся к максимальной персонализации ответов на основе "
+"астрологических данных пользователя. Общайтесь на «ты», придерживаясь "
+"молодежного стиля с элементами современного сленга, но делайте это гибко и "
+"уместно. Добавляйте юмор и забавные описания там, где это адекватно и не "
+"может быть неверно истолковано.\n"
+"\n"
+"Вы должны ответить в формате HTML. Используйте только ДОСТУПНЫЕ HTML-теги.\n"
+" ДОСТУПНЫЕ HTML-теги: <p>, <b>, <i>"
+
+#: controllers/user/start.py:235
+msgid ""
+"Perform a detailed astrological analysis of the user's natal chart.  Don't "
+"forget to write in your answer  house numbers when responding.\n"
+"Client: {name}\n"
+"Data: {astro_data}"
+msgstr ""
+"Провести подробный астрологический анализ натальной карты пользователя. При "
+"ответе не забудьте указать номера пунктов ответа.\n"
+"Имя клиента {name}\n"
+"Данные: {astro_data}"
+
+#: controllers/user/start.py:282
+msgid "Astrological analysis: {name} {zodiac}"
+msgstr "Астрологический анализ: {name} {zodiac}"
+
+#: controllers/user/start.py:289
+msgid ""
+"We created your transcription of natala chart you can read it there <a "
+"href=\"{link}\">link</a>"
+msgstr ""
+"Мы создали вашу транскрипцию карты наталы, вы можете прочитать ее здесь <a "
+"href=\"{link}\">ссылка</a>"
+
+#: keyboards/natal_chart/SimpleTimeChooser.py:75
+msgid "Confirm"
+msgstr "Подтвердить"
+
+#: keyboards/natal_chart/get_select_gender_buttons.py:11
+msgid "Male"
+msgstr "Мужской"
+
+#: keyboards/natal_chart/get_select_gender_buttons.py:18
+msgid "Female"
+msgstr "Женский"
+
+#: utils/TelegraphHelper.py:6
+msgid ""
+"<p><i>A detailed analysis of your natal chart and an in-depth interpretation "
+"of your personality using artificial intelligence trained on the best "
+"practices of Western astrology. Made with <a href=\"https://t.me/"
+"astrolog_ai_bot\"> AstroBot</a>.</i></p>"
+msgstr ""
+"<p><i>Детальный анализ вашей натальной карты и глубокая интерпретация вашей "
+"личности с помощью искусственного интеллекта, обученного на лучших практиках "
+"западной астрологии. Сделано с помощью <a href=\"https://t.me/"
+"astrolog_ai_bot\"> AstroBot</a>.</i></p>"
+
+#: utils/TelegraphHelper.py:12
+msgid "Strengths & Weaknesses"
+msgstr "Сильные и слабые стороны"
+
+#: utils/TelegraphHelper.py:13
+msgid "Career & Realization"
+msgstr "Карьера и реализация"
+
+#: utils/TelegraphHelper.py:14
+msgid "Mission"
+msgstr "Миссия"
+
+#: utils/TelegraphHelper.py:15
+msgid "Relationships"
+msgstr "Отношения"
+
+#: utils/TelegraphHelper.py:16
+msgid "Harmony & Balance"
+msgstr "Гармония и баланс"
+
+#: utils/TelegraphHelper.py:17
+msgid "Finances"
+msgstr "Финансы"
+
+#: utils/TelegraphHelper.py:18
+msgid "Blog Topics"
+msgstr "Темы блога"
+
+#: utils/TelegraphHelper.py:19
+msgid "Success Story"
+msgstr "История успеха"
+
+#: utils/TelegraphHelper.py:23
+msgid ""
+"Describe 5 unique strengths of the User and 3 areas for growth that they "
+"should work on. The answer must contain no more than 1000 characters. Add "
+"emoji. The answer to this question is based on the analysis of the natal "
+"chart."
+msgstr ""
+"Опишите 5 уникальных сильных сторон Пользователя и 3 области роста, над "
+"которыми ему следует работать. Ответ должен содержать не более 1000 "
+"символов. Добавьте смайлы. Ответ на этот вопрос основан на анализе натальной "
+"карты."
+
+#: utils/TelegraphHelper.py:26
+msgid ""
+"What fields of activity could the user engage in to fully realize "
+"themselves? The answer must contain no more than 1500 characters. Add emoji. "
+"The answer to this question is based on the analysis of the natal chart."
+msgstr ""
+"Какими сферами деятельности мог бы заняться пользователь, чтобы полностью "
+"реализовать себя? Ответ должен содержать не более 1500 символов. Добавьте "
+"смайлики. Ответ на этот вопрос основан на анализе натальной карты."
+
+#: utils/TelegraphHelper.py:29
+msgid ""
+"What is the User’s mission? How can the User benefit humanity? The answer "
+"must contain no more than 1500 characters. Add emoji. The answer to this "
+"question is based on the analysis of the natal chart."
+msgstr ""
+"Какова миссия Пользователя? Чем Пользователь может принести пользу "
+"человечеству? Ответ должен содержать не более 1500 символов. Добавьте "
+"смайлики. Ответ на этот вопрос основан на анализе натальной карты."
+
+#: utils/TelegraphHelper.py:31
+msgid ""
+"With what partner can the User build harmonious relationships? The answer "
+"must contain no more than 1000 characters. Add emoji. The answer to this "
+"question is based on the analysis of the natal chart."
+msgstr ""
+"С каким партнером Пользователь сможет построить гармоничные отношения? Ответ "
+"должен содержать не более 1000 символов. Добавьте смайлы. Ответ на этот "
+"вопрос основан на анализе натальной карты."
+
+#: utils/TelegraphHelper.py:33
+msgid ""
+"How can the User achieve harmony and balance in life? Highlight 5 key "
+"points. The answer must contain no more than 1000 characters. Add emoji. The "
+"answer to this question is based on the analysis of the natal chart."
+msgstr ""
+"Как Пользователю достичь гармонии и баланса в жизни? Выделите 5 ключевых "
+"моментов. Ответ должен содержать не более 1000 символов. Добавьте смайлы. "
+"Ответ на этот вопрос основан на анализе натальной карты."
+
+#: utils/TelegraphHelper.py:36
+msgid ""
+"How can the User achieve financial well-being? Describe one of the most "
+"suitable paths for the User. The answer must contain no more than 2000 "
+"characters. Add emoji. The answer to this question is based on the analysis "
+"of the natal chart. Give some tips for achieving financial prosperity. Give "
+"some tips for financial literacy. Consider what financial mistakes a user "
+"can make.  Advise what books to read for this purpose."
+msgstr ""
+"Как Пользователю достичь финансового благополучия? Опишите один из наиболее "
+"подходящих путей для Пользователя. Ответ должен содержать не более 2000 "
+"символов. Добавьте смайлики. Ответ на этот вопрос основан на анализе "
+"натальной карты. Дайте несколько советов для достижения финансового "
+"благополучия. Дайте несколько советов по финансовой грамотности. Рассмотрим, "
+"какие финансовые ошибки может совершить пользователь. Посоветуйте, какие "
+"книги прочитать для этой цели."
+
+#: utils/TelegraphHelper.py:41
+msgid ""
+"How should a user express himself on a blog?\n"
+"\n"
+"Specify Which blog topics are close to the user:\n"
+"- Personal blogs,\n"
+"- Niche blogs or professional blogs,\n"
+"- Corporate and business blogs,\n"
+"- Educational blogs,\n"
+"- Travel,\n"
+"- Fashion and Beauty,\n"
+"- Technology and Gadgets,\n"
+"- Sports and Fitness,\n"
+"- Arts and Culture.\n"
+"\n"
+"Specify What type of blog is appropriate for the user:\n"
+"- Text,\n"
+"- photo,\n"
+"- video podcasts (youtube or short videos),\n"
+"- audio podcasts,\n"
+"- microblogging (for example Twitter, but not only)\n"
+"Give Recommendations for blog promotion.\n"
+" Indicate Which social networks are better suited.\n"
+"The answer should be no more than 1500 characters. Add an emoji. The answer "
+"to this question is based on analyzing a natal chart.\n"
+msgstr ""
+"Как пользователь должен выразить себя в блоге?\n"
+"\n"
+"Укажите, какие темы блога близки пользователю:\n"
+"- Персональные блоги,\n"
+"- Нишевые блоги или профессиональные блоги,\n"
+"- Корпоративные и бизнес-блоги,\n"
+"- Образовательные блоги,\n"
+"- Путешествовать,\n"
+"- Мода и красота,\n"
+"- Технологии и гаджеты,\n"
+"- Спорт и фитнес,\n"
+"- Искусство и культура.\n"
+"\n"
+"Укажите, какой тип блога подходит пользователю:\n"
+"- Текст,\n"
+"- Фото,\n"
+"- видеоподкасты (youtube или короткие видеоролики),\n"
+"- аудиоподкасты,\n"
+"- микроблоги (например Twitter, но не только)\n"
+"Дайте рекомендации по продвижению блога.\n"
+"  Укажите, какие соцсети подходят лучше.\n"
+"Ответ должен быть не более 1500 символов. Добавьте смайлик. Ответ на этот "
+"вопрос основан на анализе натальной карты.\n"
+
+#: utils/TelegraphHelper.py:63
+msgid ""
+"Write the User's success story based on the data from their natal chart. The "
+"answer must contain no more than 2000 characters. Add emoji. The answer to "
+"this question is based on all previous answers."
+msgstr ""
+"Напишите историю успеха Пользователя на основе данных его натальной карты. "
+"Ответ должен содержать не более 2000 символов. Добавьте смайлы. Ответ на "
+"этот вопрос основан на всех предыдущих ответах."
+
+#: utils/TelegraphHelper.py:68
+msgid ""
+"<h3>Strengths & Weaknesses</h3><blockquote dir=\"auto\">What sets you apart "
+"from others, what is your superpower? And what are the growth points?</"
+"blockquote>"
+msgstr ""
+"<h3>Сильные и слабые стороны</h3><blockquote dir=\"auto\">Что отличает вас "
+"от других, в чем ваша суперсила? И какие точки роста?</blockquote>"
+
+#: utils/TelegraphHelper.py:71
+msgid ""
+"<h3>Career & Realization</h3><blockquote dir=\"auto\">Areas for your "
+"realization</blockquote>"
+msgstr ""
+"<h3>Карьера и реализация</h3><blockquote dir=\"auto\">Области вашей "
+"реализации</blockquote>"
+
+#: utils/TelegraphHelper.py:73
+msgid ""
+"<h3>Mission</h3><blockquote dir=\"auto\">Areas in which you will benefit "
+"this world by realizing yourself</blockquote>"
+msgstr ""
+"<h3>Миссия</h3><blockquote dir=\"auto\">Области, в которых вы принесете "
+"пользу этому миру, реализовав себя</blockquote>"
+
+#: utils/TelegraphHelper.py:75
+msgid ""
+"<h3>Relationships</h3><blockquote dir=\"auto\">Which partner can you build a "
+"harmonious relationship with?</blockquote>"
+msgstr ""
+"<h3>Отношения</h3><blockquote dir=\"auto\">С каким партнером вы сможете "
+"построить гармоничные отношения?</blockquote>"
+
+#: utils/TelegraphHelper.py:77
+msgid ""
+"<h3>Harmony & Balance</h3><blockquote dir=\"auto\">What will help you "
+"achieve them?</blockquote>"
+msgstr ""
+"<h3>Гармония и баланс</h3><blockquote dir=\"auto\">Что поможет вам их "
+"достичь?</blockquote>"
+
+#: utils/TelegraphHelper.py:79
+msgid ""
+"<h3>Finances</h3><blockquote dir=\"auto\">What will help you achieve "
+"financial success?</blockquote>"
+msgstr ""
+"<h3>Финансы</h3><blockquote dir=\"auto\">Что поможет вам добиться "
+"финансового успеха?</blockquote>"
+
+#: utils/TelegraphHelper.py:81
+msgid ""
+"<h3>Blog Topics</h3><blockquote dir=\"auto\">Recommendations and ideas for a "
+"blog.</blockquote>"
+msgstr ""
+"<h3>Темы блога</h3><blockquote dir=\"auto\">Рекомендации и идеи для блога.</"
+"blockquote>"
+
+#: utils/TelegraphHelper.py:83
+msgid ""
+"<h3>Success Story</h3><blockquote dir=\"auto\">Estimated life path, based on "
+"the position of the planets at the time of your birth (consider it one of "
+"the likely successful paths of life development).</blockquote>"
+msgstr ""
+"<h3>История успеха</h3><blockquote dir=\"auto\">Предполагаемый жизненный "
+"путь, основанный на положении планет в момент вашего рождения (считайте это "
+"одним из наиболее вероятных успешных путей развития жизни)</blockquote >"
 
 #: venv/Lib/site-packages/click/_termui_impl.py:518
 msgid "{editor}: Editing failed"
@@ -322,4 +667,3 @@ msgid_plural "{len_type} values are required, but {len_value} were given."
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
-
